--- a/blogsite.html
+++ b/blogsite.html
@@ -6,7 +6,10 @@
 
     <body>
         <div class="back">
-            
+            <div class="backbg">
+                <img src="gapanbg.jpg" alt="gapanbg"
+                width="100%">
+            </div>
         </div>
     </body>
 </html>
