--- a/blogsite.html
+++ b/blogsite.html
@@ -8,6 +8,7 @@
         <div class="back">
             <div class="backbg">
                 <img src="gapanbg.jpg" alt="gapanbg"
+                height="100%"
                 width="100%">
             </div>
         </div>
