--- a/blogsite.html
+++ b/blogsite.html
@@ -7,9 +7,7 @@
     <body>
         <div class="back">
             <div class="backbg">
-                <img src="gapanbg.jpg" alt="gapanbg"
-                height="100%"
-                width="100%">
+                <img src="gapanbg.jpg" alt="gapanbg">
             </div>
         </div>
     </body>
